--- a/index.html
+++ b/index.html
@@ -6,22 +6,47 @@
   <title>Vélez Fans</title>
   <style>
     body {
+      margin: 0;
+      font-family: Arial, sans-serif;
       background-color: #0033A0;
       color: white;
-      font-family: sans-serif;
       text-align: center;
+    }
+
+    header {
+      background-color: #002366;
+      padding: 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
       padding: 50px;
-    }
-    h1 {
-      font-size: 3em;
-    }
-    p {
-      font-size: 1.5em;
     }
   </style>
 </head>
 <body>
-  <h1>💙 Vélez Sarsfield 💙</h1>
-  <p>Página de Fans del Club Atlético Vélez Sarsfield</p>
+  <header>
+    <h1>💙 Vélez Sarsfield Fans 💙</h1>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="libertadores.html">Libertadores</a>
+      <a href="torneos.html">Torneos Locales</a>
+      <a href="historia.html">Historia del Club</a>
+    </nav>
+  </header>
+
+  <main>
+    <p>Bienvenidos a la página de fans del Club Atlético Vélez Sarsfield.</p>
+  </main>
 </body>
 </html>
